update all notebooks

--- a/Notebook 1 - number_of_ticket_prediction.ipynb
+++ b/Notebook 1 - number_of_ticket_prediction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "60a5f35b",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "837f4702",
    "metadata": {},
    "outputs": [
@@ -168,13 +168,13 @@
        "9  StellarWave A9     Sunday      0-8                245  2025-10-26"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"ticket_slot_analysis.csv\")\n",
+    "df = pd.read_csv(\"data/ticket_slot_analysis.csv\")\n",
     "df.head(10)"
    ]
   },
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "48799c52",
    "metadata": {},
    "outputs": [],
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "f9fb0066",
    "metadata": {},
    "outputs": [],
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "dace8125",
    "metadata": {},
    "outputs": [],
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "175d16a1",
    "metadata": {},
    "outputs": [
@@ -1380,7 +1380,7 @@
        "1  StellarWave A9  Saturday      0-8         267"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
